gl31-master/src/test/deca/syntax/invalid/sansobjet/bad_mult.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 9 : Erreur, '**' non-valable
//
// Historique:
//    cree le 12/01/2021
{
    int a = 8;
    int b = a**2;
}

